--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "node server.js | tsc"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,11 @@
     "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-header": "^1.8.8",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rimraf": "^0.2.1",
     "gulp-uglify": "^3.0.0"
   }
 }
